<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/bg_main_grey"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:id="@+id/root"
    android:layout_margin="5dp">
<!--    dummy-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight=".15">

    </LinearLayout>

<!--    logo-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:weightSum="1"
        android:layout_weight=".15">

        <ImageView
            android:layout_width="0dp"
            android:layout_weight=".25"
            android:layout_gravity="center_vertical"
            android:background="@drawable/ora"
            android:layout_height="90dp"
            android:layout_marginLeft="5dp"/>
        <View
            android:layout_width="0.25dp"
            android:layout_height="match_parent"
            android:background="@color/accent"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"
            android:layout_marginLeft="10dp"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_weight=".75">

            <com.example.lmsmobileapp.View.Widgets.LMSOpenSansRegularTextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".5"
                android:text="@string/logo_1"
                android:textSize="38dp"
                android:gravity="bottom"
                android:textStyle="bold"
                android:textColor="@color/button_bg"/>
            <com.example.lmsmobileapp.View.Widgets.LMSOpenSansRegularTextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".5"
                android:text="@string/logo_2"
                android:textSize="22dp"
                android:gravity="top"
                android:textColor="@color/text_color"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight=".1"
        android:weightSum="1"
        >
        <com.example.lmsmobileapp.View.Widgets.LMSOpenSansRegularTextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".5"
            android:text="@string/title_1"
            android:textSize="16dp"
            android:gravity="center_vertical|bottom"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:padding="3dp"
            android:textColor="@color/text_color"/>
        <com.example.lmsmobileapp.View.Widgets.LMSOpenSansRegularTextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".5"
            android:text="@string/title_2"
            android:textSize="14dp"
            android:gravity="center_vertical|top"
            android:layout_marginLeft="15dp"
            android:padding="2dp"
            android:textColor="@color/text_color"/>
    </LinearLayout>

<!--    fields-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight=".3"
        android:weightSum="1"
        android:layout_marginTop="15dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".3">
            <LinearLayout
                android:id="@+id/layout_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_vertical"
                android:weightSum="1"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/bg_edittext"
                android:clickable="true">
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:layout_weight=".15"
                    android:padding="8dp"
                    android:src="@drawable/ic_action_user"/>
                <com.example.lmsmobileapp.View.Widgets.LMSOpenSansRegularEdittext
                    android:id="@+id/etUsername"
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:layout_weight=".85"
                    android:hint="@string/hint_user"
                    android:textColor="@color/text_color"
                    android:background="@null"
                    android:maxLines="1"
                    android:maxLength="50"
                    android:textSize="16dp"
                    android:inputType="textCapSentences"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".3">
            <LinearLayout
                android:id="@+id/layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_vertical"
                android:weightSum="1"
                android:layout_marginTop="3dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/bg_edittext">
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:layout_weight=".15"
                    android:padding="9dp"
                    android:src="@drawable/ic_action_pass"/>
                <com.example.lmsmobileapp.View.Widgets.LMSOpenSansRegularEdittext
                    android:id="@+id/etPassword"
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:layout_weight=".85"
                    android:hint="@string/hint_pass"
                    android:textColor="@color/text_color"
                    android:background="@null"
                    android:inputType="textPassword"
                    android:maxLength="10"
                    android:textSize="16dp"
                    android:maxLines="1"
                    />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".3"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="16dp">
            <CheckBox
                android:id="@+id/checkboxRememberMe"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="15dp"
                android:layout_marginEnd="15dp"
                android:text="@string/hint_remember"
                android:textColorHint="@color/text_color"
                android:padding="8dp"
                android:textSize="16dp"
                android:button="@drawable/custom_checkbox"
                android:scaleX="0.8"
                android:scaleY="0.8" />
        </LinearLayout>


    </LinearLayout>

<!--    button-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".3">

        <LinearLayout
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:weightSum="1"
            android:layout_centerInParent="false"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:elevation="10dp"
            android:clickable="false"
            android:focusable="true"
            android:outlineAmbientShadowColor="@color/accent"
            android:background="@drawable/bg_button"
            >
            <com.example.lmsmobileapp.View.Widgets.LMSOpenSansRegularTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".8"
                android:text="Login"
                android:textSize="18dp"
                android:textColor="@color/edit_text_bg_color"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="25dp"
                />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight=".2"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_login_arrow"/>
        </LinearLayout>
    </RelativeLayout>


</LinearLayout>